@@ -1,0 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>LLSIF Daily Song Rotation</title>
+    <meta name="description" content="Find out which Dailies are available in the coming days or search for a date.">
+    <link rel="canonical" href="https://suyo.be/llsif/calc/dailies"/>
+
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/material/400.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/100.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/300.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/400.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/500.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/700.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/900.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="css/dailies.css" media="screen,projection"/>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <link rel="icon" type="image/png" sizes="96x96" href="image/launcher-icon-96.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#f48fb1">
+    <meta name="theme-color" content="#f48fb1">
+</head>
+<body>
+<script>
+    if (document.cookie.indexOf("dark-mode=yes") !== -1) {
+        document.body.className += 'dark-mode';
+    }
+</script>
+<div class="font-preload">
+    <span style="font-weight: 100">Thin</span>
+    <span style="font-weight: 300">Light</span>
+    <span style="font-weight: 400">Regular</span>
+    <span style="font-weight: 500">Medium</span>
+    <span style="font-weight: 700">Bold</span>
+</div>
+
+<div class="fixed">
+    <nav>
+        <div class="nav-wrapper pink lighten-5">
+            <a class="brand-logo center">Daily Rotation</a>
+            <ul id="nav-mobile" class="left">
+                <li class="pink lighten-3"><a href="."><i
+                        class="material-icons left">keyboard_arrow_left</i>BACK</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <label for="date">Search for a Date:</label> <input type="date" id="date">
+        <a id="go" class="waves-effect pink lighten-3 waves-light btn">Go</a>
+    </div>
+</div>
+<div class="container">
+    <table id="calendar" class="striped">
+    </table>
+</div>
+
+<script type="text/javascript" src="js/register-sw.js"></script>
+<script type="text/javascript" src="vendor/jquery.min.js"></script>
+<script type="text/javascript" src="vendor/materialize.min.js"></script>
+<script type="text/javascript" src="js/dailies.js"></script>
+</body>
+</html>
