@@ -118,6 +118,9 @@
             <li><a target="_self" href="otasuke" class="tooltipped" data-position="right" data-delay="0"
                    data-tooltip="Optimize your team for Friendly / Companion Matches.">Otasuke / Boost Power Sorter</a>
             </li>
+            <li><a target="_self" href="dailies" class="tooltipped" data-position="right" data-delay="0"
+                   data-tooltip="Find out which Dailies are available in the coming days or search for a date.">Daily Song Rotation</a>
+            </li>
             <li>
                 <div class="divider"></div>
             </li>
