@@ -6,6 +6,13 @@
     <meta name="description" content="Optimize your team for Friendly / Companion Matches.">
     <link rel="canonical" href="https://suyo.be/llsif/calc/otasuke" />
 
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/material/400.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/100.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/300.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/400.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/500.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/700.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="vendor/fonts/roboto/900.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="vendor/materialize.min.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/style.css" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/otasuke.css" media="screen,projection"/>
