@@ -1,3 +1,8 @@
+June 02, 2022 - Hot Damn It's Been A While Edition
+----------------------------
+- It's almost as dusty in here as in my room
+- Added "Daily Rotation" tool, hit that Tools button to check it out
+
 June 10, 2021 - WW IS GONE EDITION
 ----------------------------
 - YEEEEEEEEEEEEEEEEEEEEEEE
